# DjangoconUS2024-Hackathon

./: .env.local  .gitignore  .platform.app.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.platform/: applications.yaml  routes.yaml  services.yaml
unveil/: manage.py  requirements.txt
unveil/.platform/: routes.yaml  services.yaml
unveil/apps/core/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
unveil/apps/core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_profile_bio_alter_profile_location_and_more.py  0004_auto_20240926_1143.py  0005_auto_20240926_1143.py  0006_auto_20240926_1143.py
unveil/apps/users/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
unveil/apps/users/migrations/: 0001_initial.py  0002_alter_useraccount_options_alter_useraccount_managers_and_more.py  0003_useraccount_name.py  0004_useraccount_date_joined_useraccount_is_active_and_more.py  0005_auto_20240926_1143.py  0006_auto_20240926_1143.py  0007_auto_20240926_1143.py
unveil/unveil/: asgi.py  settings.py  urls.py  wsgi.py
unveil_frontend/: pubspec.yaml
unveil_frontend/android/app/src/main/: AndroidManifest.xml
unveil_frontend/lib/: main.dart
unveil_frontend/lib/pages/: ViewArtWork.dart  account.dart  login.dart  signup.dart
unveil_frontend/test/: widget_test.dart
unveil_frontend/web/: index.html  manifest.json
