[project]
name = "Unveil"
version = "0.1.0"
description = "An Art Gallery App for Django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "asgiref>=3.8.1",
    "async-timeout>=4.0.3",
    "django>=5.1.1",
    "django-ninja>=1.3.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.2",
    "pydantic-core>=2.23.4",
    "redis>=5.0.8",
    "sqlparse>=0.5.1",
    "typing-extensions>=4.12.2",
    "platformshconfig>=2.4.0",
    "environs>=11.0.0",
    "pillow>=10.4.0",
    "django-cors-headers>=4.4.0",
    "cffi>=1.17.1",
    "cryptography>=43.0.1",
    "gunicorn>=23.0.0",
    "marshmallow>=3.22.0",
    "packaging>=24.1",
    "pycparser>=2.22",
    "python-dotenv>=1.0.1",
    "pyjwt>=2.9.0",
]

[tool.uv]
dev-dependencies = ["black>=24.8.0", "flake8>=7.1.1"]

[tool.black]
line-length = 120
target-version = ['py311']
